--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,15 @@
       <article role="main" class="blog-post">
         {{ .Content }}
       </article>
-
+      <hr/>
+      
+      {{ if .Params.tags }}
+        <span class="post-meta">
+          {{ range .Params.tags }}
+            #<a href="{{ $.Site.LanguagePrefix }}/tags/{{ . | urlize }}">{{ . }}</a>&nbsp;
+          {{ end }}
+        </span>
+      {{ end }} 
       {{ if (.Params.paging) }}
       <ul class="pager blog-pager">
         {{ if .PrevInSection }}
